5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1674_1100.log
== TEST (2019-04-25 10:43:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input(" "))

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:43:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input(" Qual a cedula? "))
print("Entrada:", cedula)

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input(" Qual a cedula? "))
print("Entrada:", cedula)

if(c==2 or c==5 or c==10 or c ==20 or c==50 or c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):
		print("Animal: Garça")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", cedula)
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input(" Qual a cedula? "))
print("Entrada:", c)

if(c==2 or c==5 or c==10 or c ==20 or c==50 or c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):
		print("Animal: Garça")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input(" Qual a cedula? "))
print("Entrada:", c)

if(c==2 or c==5 or c==10 or c ==20 or c==50 or c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):
		print("Animal: Garca")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input(" Qual a cedula? "))
print("Entrada:", c)

if(c==2 or c==5 or c==10 or c ==20 or c==50 or c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):
		print("Animal: Garca")
	elif(c==10):
		print("Animal: Arara")
	elif(c==20):
		print("Animal: Mico-leao-dourado")
	elif(c==50):
		print("Animal: Onca-pintada")
	elif(c==100):
		print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:56:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input(" Qual a cedula? "))
print("Entrada:", c)

if(c==2 or c==5 or c==10 or c ==20 or c==50 or c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):
		print("Animal: Garca")
	elif(c==10):
		print("Animal: Arara")
	elif(c==20):
		print("Animal: Mico-leao-dourado")
	elif(c==50):
		print("Animal: Onca-pintada")
	elif(c==100):
		print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.192486
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
